# dogbot_tc

./: README.md  requirements.sh
dogbot_control/launch/: controllers.launch
dogbot_description/urdf/: dogbot.xacro
dogbot_gait/: CMakeLists.txt
dogbot_gait/src/: dogbot_gait_node.cc
dogbot_gazebo/launch/: dog.launch  main.launch  put_robot_in_world.launch  start_world.launch
dogbot_markers/rviz/: dogbot.rviz
dogbot_markers/scripts/: arrows_rviz.py  world_to_base_tf_publisher.py
dogbot_pkg/: CMakeLists.txt  CMakeLists_original.txt  package.xml
dogbot_pkg/src/: DogBotAPI.cc
dogbot_simplegait/: CMakeLists.txt  package.xml
dogbot_simplegait/launch/: simplegait_gazebo.launch  start_simplegait.launch
dogbot_simplegait/src/: dogbot_simplegait_node.cc
