<?xml version="1.0"?>
<package format="2">
  <name>dogbot_pkg</name>
  <version>0.0.0</version>
  <description>The dogbot_pkg package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
